// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Suggest Empty input 1`] = `
Array [
  Object {
    "id": 10,
    "prio": 3,
    "text": "Hello world!",
    "title": "Hello world!",
  },
  Object {
    "id": 20,
    "prio": 2,
    "text": "Foo bar",
    "title": "Foo bar",
  },
  Object {
    "id": 30,
    "prio": 1,
    "text": "-BAZZZ-",
    "title": "-BAZZZ-",
  },
]
`;

exports[`Suggest Equality 1`] = `
Array [
  Object {
    "id": 20,
    "prio": 2,
    "text": "Foo bar",
    "title": "[Foo] [bar]",
  },
]
`;

exports[`Suggest Prefix 1`] = `
Array [
  Object {
    "id": 20,
    "prio": 2,
    "text": "Foo bar",
    "title": "Foo [ba]r",
  },
  Object {
    "id": 30,
    "prio": 1,
    "text": "-BAZZZ-",
    "title": "-[BA]ZZZ-",
  },
]
`;

exports[`Suggest Prio 1`] = `
Array [
  Object {
    "id": 30,
    "prio": 2,
    "text": "-BAZZZ-",
    "title": "-BAZZZ-",
  },
  Object {
    "id": 20,
    "prio": 1,
    "text": "Foo bar",
    "title": "Foo bar",
  },
  Object {
    "id": 10,
    "prio": 0,
    "text": "Hello world!",
    "title": "Hello world!",
  },
]
`;
